# DualTestBeam

./: README.md
compact/: Resolution.C  massjobs.py  neutron_time.py  out_to_hist.sh
compact/analysis/: CMakeLists.txt  Resolution.C  generate_cpp_file.sh  log.txt  out_to_hist.sh  runResolution.C  runResolution.cpp
compact/analysis/analysis/: CMakeLists.txt  Makefile  Resolution.C
compact/analysis/analysis/include/: ecalProcessing.h  globals.h  hcalProcessing.h  plotting.h  timeFrames.h
compact/analysis/analysis/src/: digis.cc
compact/analysis/include/: LinkDef.h  Resolution.h  calibration.h  digis.h  ecalProcessing.h  globals.h  hcalProcessing.h  timeFrames.h
compact/analysis/lib/: CMakeCache.txt  Makefile  cmake_install.cmake  libDualTestBeam_lib.dylib
compact/analysis/lib/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
compact/analysis/src/: Resolution.cc  calibration.cc  digis.cc  ecalProcessing.cc  globals.cc  hcalProcessing.cc  plotting.cc  timeFrames.cc
compact/jobs/: massjobs.sh
compact/jobs/BigEcal2/: condor-executable-BigEcal2-10-e.jdl  condor-executable-BigEcal2-10-pi.jdl  condor-executable-BigEcal2-10_GeV-e.sh  condor-executable-BigEcal2-10_GeV-pi.sh  condor-executable-BigEcal2-20-e.jdl  condor-executable-BigEcal2-20-pi.jdl  condor-executable-BigEcal2-20_GeV-e.sh  condor-executable-BigEcal2-20_GeV-pi.sh  condor-executable-BigEcal2-30-e.jdl  condor-executable-BigEcal2-30-pi.jdl  condor-executable-BigEcal2-30_GeV-e.sh  condor-executable-BigEcal2-30_GeV-pi.sh
compact/jobs/FSCEPSAonly/: condor-executable-FSCEPSAonly-10-e.jdl  condor-executable-FSCEPSAonly-10-pi.jdl  condor-executable-FSCEPSAonly-10_GeV-e.sh  condor-executable-FSCEPSAonly-10_GeV-pi.sh  condor-executable-FSCEPSAonly-20-e.jdl  condor-executable-FSCEPSAonly-20-pi.jdl  condor-executable-FSCEPSAonly-20_GeV-e.sh  condor-executable-FSCEPSAonly-20_GeV-pi.sh  condor-executable-FSCEPSAonly-30-e.jdl  condor-executable-FSCEPSAonly-30-pi.jdl  condor-executable-FSCEPSAonly-30_GeV-e.sh  condor-executable-FSCEPSAonly-30_GeV-pi.sh
compact/jobs/FSCEPonly/: condor-executable-FSCEPonly-10-e.jdl  condor-executable-FSCEPonly-10-pi.jdl  condor-executable-FSCEPonly-10_GeV-e.sh  condor-executable-FSCEPonly-10_GeV-pi.sh  condor-executable-FSCEPonly-20-e.jdl  condor-executable-FSCEPonly-20-pi.jdl  condor-executable-FSCEPonly-20_GeV-e.sh  condor-executable-FSCEPonly-20_GeV-pi.sh  condor-executable-FSCEPonly-30-e.jdl  condor-executable-FSCEPonly-30-pi.jdl  condor-executable-FSCEPonly-30_GeV-e.sh  condor-executable-FSCEPonly-30_GeV-pi.sh
compact/jobs/SampOnly/: condor-executable-SampOnly-10-e.jdl  condor-executable-SampOnly-10-pi.jdl  condor-executable-SampOnly-10_GeV-e.sh  condor-executable-SampOnly-10_GeV-pi.sh  condor-executable-SampOnly-20-e.jdl  condor-executable-SampOnly-20-pi.jdl  condor-executable-SampOnly-20_GeV-e.sh  condor-executable-SampOnly-20_GeV-pi.sh  condor-executable-SampOnly-30-e.jdl  condor-executable-SampOnly-30-pi.jdl  condor-executable-SampOnly-30_GeV-e.sh  condor-executable-SampOnly-30_GeV-pi.sh
compact/jobs/SampOnly2/: condor-executable-SampOnly2-10-e.jdl  condor-executable-SampOnly2-10-pi.jdl  condor-executable-SampOnly2-10_GeV-e.sh  condor-executable-SampOnly2-10_GeV-pi.sh  condor-executable-SampOnly2-20-e.jdl  (+7 more)
include/: DualCrysCalorimeterHit.h
install/lib/: G__DualTestBeam_rdict.pcm  libDualTestBeam.dylib
lib/: libDualTestBeam.dylib
src/: DualCrysCalorimeterSDAction.cpp
(+8 files in other folders)
